<resources>
    <string name="app_name">Farmtotable</string>
    <string name="welcom_text_main">Welcome</string>
    <string name="sample_User">Mark</string>
    <string name="sample_noti_count">1</string>
    <string name="search_bar_hint">Search for any product</string>
    <string name="current_discount_text">Save 10% on corn!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orderAmount">KSh 1800</string>
    <string name="cartQuantity">Amt: 1</string>
    <string name="creator_tag">Made with ❤️‍🔥 by Ndegwaa.</string>
    <string name="register_text">New to the app? Register here</string>
    <string name="item_to_cart">Add to cart</string>
</resources>