<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage_fragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/appBarCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_header"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="cursive"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/search_box_top"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/search_background"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/search_bar_hint"
                    android:inputType="text"
                    android:padding="8dp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/recycler_items_ackground"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:id="@+id/prodimg"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:padding="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/onion"
                            tools:ignore="DuplicateIds" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/prodtxt0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="sans-serif-black"
                                android:text="onions"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ratingprod0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/rating_popular"
                                android:text="5.0"
                                android:textColor="@color/white"
                                android:textSize="15dp"
                                tools:ignore="TextSizeCheck" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="Ksh 150/ KG"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/onionToCart"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="4dp"
                                    android:layout_weight="0"
                                    android:backgroundTint="@color/app_green"
                                    android:drawablePadding="4dp"
                                    android:text="@string/item_to_cart"
                                    tools:ignore="DuplicateIds" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/recycler_items_ackground"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <ImageView
                            android:id="@+id/prodimg"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/maize"
                            tools:ignore="DuplicateIds" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/prodtxt0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="sans-serif-black"
                                android:text="Maize"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                tools:ignore="Duplicateids"/>

                            <TextView
                                android:id="@+id/ratingprod0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/rating_popular"
                                android:text="4.5"
                                android:textColor="@color/white"
                                android:textSize="15dp"
                                tools:ignore="TextSizeCheck,Duplicateids" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView8"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="Ksh 150/ KG"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/maizeToCart"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="4dp"
                                    android:layout_weight="0"
                                    android:backgroundTint="@color/app_green"
                                    android:text="@string/item_to_cart" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/recycler_items_ackground"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <ImageView
                            android:id="@+id/prodimg"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/beans"
                            tools:ignore="DuplicateIds" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/prodtxt0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="sans-serif-black"
                                android:text="French Beans"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/ratingprod0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/rating_popular"
                                android:text="4.0"
                                android:textColor="@color/white"
                                android:textSize="15dp"
                                tools:ignore="TextSizeCheck,Duplicateids" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="Ksh 180/ KG"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/beanToCart"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:layout_margin="4dp"
                                    android:layout_weight="0"
                                    android:backgroundTint="@color/app_green"
                                    android:text="@string/item_to_cart"
                                    />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/recycler_items_ackground"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <ImageView
                            android:id="@+id/prodimg"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/tomato"
                            tools:ignore="DuplicateIds" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/prodtxt0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="sans-serif-black"
                                android:text="Tomatoes"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/ratingprod0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/rating_popular"
                                android:text="4.5"
                                android:textColor="@color/white"
                                android:textSize="15dp"
                                tools:ignore="TextSizeCheck,Duplicateids" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView10"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="Ksh 60/ KG"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/tomatoToCart"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="4dp"
                                    android:layout_weight="0"
                                    android:backgroundTint="@color/app_green"
                                    android:text="@string/item_to_cart"
                                    tools:ignore="DuplicateIds" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>